Fix syntax errors in decompiled sources - score 0